# crypto-monitor

./: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  scheduler.py
collectors/: binance_futures.py  onchain.py
formatters/: report.py
notifiers/: feishu.py
